<resources>
    <string name="app_name">MyClock</string>
    <string name="action_settings">Settings</string>
    <string name="edit_btn">编辑</string>
    <string name="start_btn">开始</string>
    <string name="pause_btn">暂停</string>
    <string name="reset_btn">重置</string>
    <string name="dialog_title">编辑时间</string>
    <string name="dialog_time_label">倒计时:</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_placeholder">请输入数字</string>
    <string-array name="time_period">
        <item>10min</item>
　　    <item>15min</item>
　　    <item>20min</item>
　　 </string-array>

</resources>
